// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a column when pressed: Columns Result 1`] = `
{
  "color": "black",
  "id": Any<String>,
  "name": "My new column",
  "position": 1,
}
`;

exports[`should focus on the input component and submit when 'Enter' is pressed: Columns Result 1`] = `
{
  "color": "black",
  "id": Any<String>,
  "name": "My new column 2",
  "position": 1,
}
`;
